--- a/package.json
+++ b/package.json
@@ -12,34 +12,41 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "~0.16.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
-    "expo": "~41.0.1",
-    "expo-asset": "~8.3.1",
-    "expo-constants": "~10.1.3",
-    "expo-font": "~9.1.0",
-    "expo-linking": "~2.2.3",
-    "expo-splash-screen": "~0.10.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-web-browser": "~9.1.0",
+    "dotenv": "^16.0.1",
+    "expo": "^45.0.4",
+    "expo-asset": "~8.5.0",
+    "expo-constants": "^13.1.1",
+    "expo-font": "~10.1.0",
+    "expo-linking": "^3.1.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-web-browser": "~10.2.1",
     "lodash": "^4.17.21",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12"
+    "react": "17.0.2",
+    "react-dom": "^17.0.1",
+    "react-native": "0.68.2",
+    "react-native-config": "^1.4.5",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "^0.17.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/lodash": "^4.14.182",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "jest-expo": "~41.0.0",
+    "jest-expo": "^45.0.1",
     "typescript": "~4.0.0"
   },
   "private": true
