--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "react-native-web": "^0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
@@ -46,6 +50,8 @@
     "@types/lodash": "^4.14.182",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-persist": "^4.3.1",
     "jest-expo": "^45.0.1",
     "typescript": "~4.0.0"
   },
