--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "~0.16.2",
+    "@expo/webpack-config": "~0.16.21",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "dotenv": "^16.0.1",
-    "expo": "^45.0.4",
+    "expo": "^45.0.6",
     "expo-asset": "~8.5.0",
-    "expo-constants": "^13.1.1",
+    "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
-    "expo-linking": "^3.1.0",
+    "expo-linking": "~3.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-web-browser": "~10.2.1",
     "lodash": "^4.17.21",
     "react": "17.0.2",
-    "react-dom": "^17.0.1",
-    "react-native": "0.68.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.69.0",
     "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "^0.17.7",
+    "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
@@ -46,14 +46,14 @@
     "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.182",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-persist": "^4.3.1",
-    "jest-expo": "^45.0.1",
-    "typescript": "~4.0.0"
+    "jest-expo": "^45.0.0",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
