attempting to remove npm ci from pipeline

--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -20,7 +20,7 @@ jobs:
           expo-version: 5.x
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
-      - name: Install dependencies
-        run: npm ci
+      # - name: Install dependencies
+      #   run: npm ci
       - name: Build android on EAS
         run: eas build -p android
